// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Icon Help 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#263238",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-31"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon IndeterminateCheckBox 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#263238",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-19"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon Power 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#263238",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-7"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M13 3h-2v10h2V3zm4.83 2.17l-1.42 1.42C17.99 7.86 19 9.81 19 12c0 3.87-3.13 7-7 7s-7-3.13-7-7c0-2.19 1.01-4.14 2.58-5.42L6.17 5.17C4.23 6.82 3 9.26 3 12c0 4.97 4.03 9 9 9s9-4.03 9-9c0-2.74-1.23-5.18-3.17-6.83z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon Refresh 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#263238",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-1"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon RssFeed 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#263238",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-13"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="6.18"
          cy="17.82"
          r="2.18"
        />
        <path
          d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon Settings 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#263238",
      "height": "3em",
      "width": "3em",
    }
  }
>
  <div
    className="Icon"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-25"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms/Time 現在日時 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#263238",
    }
  }
>
  <div
    className="Time"
  >
    <div
      className="Time-MMDD"
    >
      6/15
    </div>
    <div
      className="Time-HHmmss"
    >
      07:12:05
    </div>
  </div>
</div>
`;
